# tinyhtml5

./: README.rst  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
doc/: conf.py
docs/: api_reference.rst  changelog.rst  common_use_cases.rst  conf.py  contribute.rst  first_steps.rst  going_further.rst  index.rst  support.rst
html5lib/: __init__.py  _ihatexml.py  _inputstream.py  _tokenizer.py  _trie.py  constants.py  html5parser.py  inputstream.py  parser.py  tokenizer.py  treebuilder.py
tests/: __init__.py  test_encoding.py  test_tokenizer.py  test_tree_construction.py
tinyhtml5/: __init__.py  constants.py  inputstream.py  parser.py  tokenizer.py  treebuilder.py
