[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'html5lib'
description = 'HTML parser based on the WHATWG HTML specification'
keywords = ['html', 'parser']
authors = [{name = 'James Graham', email = 'james@hoppipolla.co.uk'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.9'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
dependencies = [
  'webencodings >=0.5.1',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Text Processing :: Markup :: HTML'
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/html5lib/html5lib-python'
Documentation = 'https://html5lib.readthedocs.io/'
Code = 'https://github.com/html5lib/html5lib-python'
Issues = 'https://github.com/html5lib/html5lib-python/issues'
Changelog = 'https://html5lib.readthedocs.io/en/latest/changes.html'

[project.optional-dependencies]
doc = ['sphinx']
test = ['pytest', 'ruff']

[project.scripts]
weasyprint = 'weasyprint.__main__:main'

[tool.flit.sdist]
exclude = ['.*']

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'N', 'RUF']
ignore = ['RUF001', 'RUF002', 'RUF003']
